@@ -1372,10 +1372,13 @@ bool FluxboxWindow::setInputFocus() {
 #ifdef DEBUG
             cerr<<__FUNCTION__<<": transient 0x"<<(*it)<<endl;
 #endif // DEBUG
-            if ((*it)->isModal())
+            if ((*it)->isStateModal())
                 return (*it)->focus();
         }
     }
+
+    if (m_client->isModal())
+        return false;
 
     bool ret = false;
 
